fix!: remove option to make a section block match the row height in a flex layout and fix stretch flex layout in a parent section

--- a/automad/src/client/admin/styles/components/editor/block.less
+++ b/automad/src/client/admin/styles/components/editor/block.less
@@ -36,6 +36,9 @@
 	position: relative;
 	flex-basis: 100%;
 	flex-grow: 0;
+
+	display: flex;
+	align-items: stretch;
 	min-width: 16rem;
 	margin: 0 !important;
 	padding: 0 !important;
@@ -51,6 +54,8 @@
 
 	&__content {
 		position: relative;
+		display: flex;
+		align-items: stretch;
 		width: 100%;
 		padding: 0.2rem 0;
 		max-width: @am-bl-editor-block-max-width !important;
