--- a/automad/src/client/admin/styles/components/editor/blocks/section.less
+++ b/automad/src/client/admin/styles/components/editor/blocks/section.less
@@ -131,6 +131,7 @@
 
 	&__editor {
 		display: block;
+		flex-grow: 1;
 
 		& > .codex-editor > .codex-editor__redactor {
 			--space: var(--gap, 1px);
@@ -242,6 +243,7 @@
 		}
 
 		.ce-block & > .codex-editor {
+			height: 100%;
 			color: var(--color, inherit);
 			padding-top: var(--paddingTop);
 			padding-bottom: var(--paddingBottom);
