--- a/automad/src/client/blocks/styles/flex.less
+++ b/automad/src/client/blocks/styles/flex.less
@@ -109,6 +109,10 @@ am-flex {
 
 	.am-align-stretch > & {
 		align-items: stretch;
+
+		& > * > * {
+			height: 100%;
+		}
 	}
 
 	.am-align-center > & {
