--- a/automad/src/client/blocks/styles/section.less
+++ b/automad/src/client/blocks/styles/section.less
@@ -35,6 +35,7 @@
 am-section {
 	display: flex;
 	flex-direction: column;
+	height: 100%;
 	box-sizing: border-box;
 	color: var(--am-section-color);
 	background-color: transparent;
